fix google auth